--- a/lab-eddie/package.json
+++ b/lab-eddie/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "DEBUG='app*' mocha",
+    "start": "DEBUG='app*' node server.js"
   },
   "keywords": [],
   "author": "",
